# awCore

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: check_sse.cmake
dependencies/: CMakeLists.txt
include/aw/core/: all.h
include/aw/core/async/: async.h  task_graph.h  thread_pool.h  thread_worker.h
include/aw/core/filesystem/: awpk.h  awpk_vfs.h  file.h  files_vfs.h  virtual_file_system.h
include/aw/core/math/: math.h  matrix.h  simd.h  vector2.h  vector3.h  vector3.inl  vector4.h
include/aw/core/memory/: allocators.h  intrusive_ref_counted.h  memalloc.h  paged_memory_pool.h
include/aw/core/primitive/: container_aliases.h  defer.h  delegate.h  enum_flags.h  hash_combine.h  macros.h  numbers.h  strings.h  strings.inl
src/aw/core/: all.cpp  aw_core_checks.h.in
src/aw/core/async/: task_graph.cpp  thread_worker.cpp
src/aw/core/filesystem/: awpk.cpp  awpk_vfs.cpp  file.cpp  files_vfs.cpp  virtual_file_system.cpp
src/aw/core/memory/: intrusive_ref_counted.cpp  memalloc.cpp  paged_memory_pool.cpp
src/aw/core/thread_pool/: thread_pool.cpp  thread_worker.cpp
src/awpk/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  async_tests.cpp  awpk_manifest.json  filesystem_tests.cpp  main_tests.cpp  math_tests.cpp
tests/assets/: test.txt  test2.txt
